--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,7 @@
-<h1> My name is <%= ['Amigo', 'Misty', 'Almond'].sample %></h1>
+<% if @name %>
+<h1> My name is <%= @name %></h1>
+<% end %>
 
 <div style='border: 2px dashed red'>
-  <img src='https://imgur.com/jFaSxym' alt='a cat'>
+  <img src='https://i.imgur.com/jFaSxym.png' alt='a cat'/>
 </div>
